src/App.css
/* ... */
/* ==========================================================
   4. Custom CSS 
   ========================================================== */
/* Common Css */

[data-theme="dark"] .issue_card {
  border-color: transparent;
  background-color: #201f1f;
}

.heading-font {
  font-family: "Inter", sans-serif;
}

/* View All Link */
.link-view-all-color {
  color: var(--link-view-all-color) !important;
  font-weight: 600;
  transition: color 0.2s;
  font-size: 14px;
}

/* Card CSS */
.issue_card {
  .card-tag {
    border-color: var(--card-tag-border-color);
    color: var(--card-tag-color);
    background-color: var(--card-tag-bg-color);
    color: var(--card-tag-color);
    backdrop-filter: blur(12px);
  }

  .btn {
    color: var(--card-btn-color);
    border-color: var(--card-btn-border-color);
    background-color: var(--bg-card-btn);
    border: 1px solid var(--card-btn-border-color);
    box-shadow: none;

    &:hover {
      background-color: var(--bg-card-btn-hover);
    }
  }
}

/* Navbar CSS */

.navbar.main-container {
  padding-left: 24px;
  padding-right: 24px;
}

nav li a.active:not(.register) {
  color: var(--color-primary);
}

header.nav_header {
  border-bottom: 1px solid var(--color-header-bordar);
}

[data-theme="dark"] {
  header.nav_header {
    background-color: #201f1f;
  }
}

/* Slider CSS */
.swiper-button-prev,
.swiper-button-next {
  color: #fff !important;
}

/* Footer CSS */
.bottom_footer {
  border-top: 1px solid var(--color-footer-border);
}

/* Category Cards */
.category-card_custom {
  @apply w-full border flex rounded-2xl p-6 flex-col cursor-pointer transition-all duration-300 hover:-translate-y-1;
}

[data-theme="dark"] .category-card_custom {
  border-color: rgb(64, 73, 67);
  background-color: rgb(28, 27, 27);

  .category-icon-box {
    color: #95d4b3;
    background-color: rgba(45, 106, 79, 0.2);
  }

  p {
    color: rgb(191, 201, 193);
  }
}

[data-theme="dark"] .category-card {
  background-color: #1a2a1f;
  border-color: transparent;
}

.category-card:hover {
  border-color: var(--color-primary);
}

[data-theme="light"] .category-card_custom {
  p {
    color: var(--color-text) !important;
  }
}

/* Icon box */

[data-theme="light"] {
  .category-card_custom {
    border-color: #bfc9c1;
    background-color: var(--color-secondary);
    color: var(--color-secondary-content)
  }
}

/* Login Register Page */
[data-theme="light"] .sign_in{
  background-color: #fff;
}

/* Issue details */
.input {
  width: 100%;
}

[data-theme='dark'] .modal-box{
  background-color: rgb(14, 14, 14);
  box-shadow: 0 0 1px 1px rgba(200,200,200, .8);
  h2,h3,h4{
    color: #e5e2e1;
  }
  input{
    background-color: rgba(64, 73, 67, .1);
  }
  label{
    color: #bfc9c1;
  }
  .submit_btn{
    background-color: rgb(45, 106, 79);
    color: rgb(168, 231, 197);
  }
}

.table_issue_contribute tr th{
  font-weight: 600;
  text-transform: uppercase;
  color: var(--color-text) !important;
}

.modal-box{
  overflow-x: hidden;
}

/* All page Status */
[data-theme='light'] .status_style{
  background-color: #b1f0ce;
  color: #002114;
}
[data-theme='dark'] .status_style{
  background-color: #2d6a4f;
  color: #95d4b3;
}
/* All page category */
[data-theme='dark'] .category_style{
  background-color: #353534;
  color: #bfc9c1;
}

[data-theme='light'] .category_style{
  background-color: #e7e7e7;
}
/* ... */

